--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Ir a Github</h1>
-    <a href="https://github.com/">
+    <h1>¡Bienvenidos!<br></br>Ir a Github</h1>
+    <a href="https://github.com/javieraisoto03">
       <img src="./assets/img/Octocat.png" alt="octocat">
     </a>
     <button type="button" class="btn">
-      <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+      <a href="https://github.com/javieraisoto03" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
   </div>
 </body>
